--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -45,7 +45,7 @@
 			top:0;
 			left:0;
 			z-index:1;
-			box-shadow: 0px 2px 5px #888888;
+/*			box-shadow: 0px 2px 5px #888888;*/
 		}
 		header p {
 			color:rgb(50,50,50);
