--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -5,7 +5,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Arimo:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-		<title>Avant Interiors</title>
+		<title>Avanti Interiors</title>
 		<style>
 
 		html {
@@ -102,10 +102,10 @@
 	</head>
 	<body>
 	<header>
-		<h1>Avant Interiors</h1>
+		<h1>Avanti Interiors</h1>
 		<p>
 			Phone: 01242 2345253<br>
-			Email: info@avantinteriors.co.uk
+			Email: info@avantiinteriors.co.uk
 		</p>
 
 	</header>
