--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -47,6 +47,25 @@
 			z-index:1;
 			bottom:0;
 		}
+    header ul {
+      list-style:none;
+      font-family: 'Arimo', sans-serif;
+      color:rgb(50,50,50);
+      font-size:10pt;
+      position: absolute;
+      bottom:-5px;
+      left:360px;
+      padding:0;
+      border-left:1px solid rgb(50,50,50);
+    }
+    header li {
+     /* display:inline;*/
+      padding:5px;
+    }
+    header li:hover {
+      cursor: pointer;
+      border-left:5px solid rgb(50,50,50);
+    }
 		#slides {
       		display:none;
       		position:absolute;
@@ -217,6 +236,27 @@
 			height:100%;
 			width:100%;
 		}
+    footer {
+      background-color:white;
+      height:50px;
+      width:100%;
+      position:absolute;
+      top:600px;
+      left:0;
+      z-index:1;
+
+    }
+    footer p {
+      color:rgb(50,50,50);
+      /*font-family: 'Righteous', cursive;*/
+      font-family: 'Arimo', sans-serif;
+      position:relative;
+      top:5px;
+      text-align:center;
+      font-size:9pt;
+      right:20px;
+      z-index:1;
+    }
 		</style>
 		 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   		<script src="{% static 'js/jquery.slides.min.js' %}"></script>
@@ -236,6 +276,11 @@
 			Phone: 01242 2345253<br>
 			Email: info@avantiinteriors.co.uk
 		</p>
+    <ul>
+      <li>Office Partitioning</li>
+      <li>Suspended Ceilings</li>
+      <li>Other Services</li>
+    </ul>
 	</header>
   <div id="slides">
     <img src="{% static 'images/1.jpg' %}">
@@ -249,7 +294,9 @@
 Nunc quis placerat diam. Curabitur vel molestie sem, sed semper massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vehicula neque quis nisl elementum, vitae scelerisque metus lobortis. Donec cursus, magna sit amet tincidunt consectetur, justo velit efficitur nulla, sit amet tincidunt massa est nec leo. Vivamus at odio tellus. Vivamus venenatis porta rhoncus. Donec nulla lorem, cursus a suscipit a, dictum non nulla. Nullam ultrices blandit hendrerit. Vestibulum egestas dapibus tortor venenatis scelerisque.</p>
 		
 	</div>
-	
+<footer>
+  <p>&copy; Avanti Interiors 2014</p>
+</footer>
 </body>
 
 </HTML>
