--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -5,9 +5,11 @@
 		<link href='http://fonts.googleapis.com/css?family=Arimo:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link href="{% static 'css/header.css'%}" rel='stylesheet' type='text/css'>
+		<link href="{% static 'css/infoLayout.css'%}" rel='stylesheet' type='text/css'>
 		<title>Avanti Interiors</title>
 	</head>
 	<body>
+	<div class="wrapper">
 	<header>
 		<h1><a href="/">Avanti Interiors</a></h1>
 		<p>
@@ -20,7 +22,27 @@
       <li><a href="other">Other Services</a></li>
     </ul>
 	</header>
-
+	<div id="infoBox1" class="infoBox">
+		<h2>Ceilings</h2>
+		<p>
+		Nullam a lorem nulla. Nulla ornare, massa id laoreet hendrerit, eros arcu lacinia nunc, porta fringilla magna magna ut felis. Sed ut facilisis justo. Phasellus auctor rhoncus lacus, at aliquet ligula finibus nec. Nunc feugiat pretium ipsum, a tristique eros elementum sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent blandit mollis imperdiet. In porttitor elementum ligula, nec malesuada tellus pharetra at. Mauris et vehicula quam. Aliquam viverra nulla ac luctus rhoncus. Praesent lacus dolor, euismod eget tristique eu, facilisis sed quam. Nunc fringilla fermentum magna a accumsan. Sed rutrum nisi in nisl congue, tempus commodo dui lacinia. Mauris placerat turpis egestas iaculis tincidunt.<br>
+		<br>
+		Nulla at mi ante. Quisque lacinia, magna nec sagittis iaculis, mi dolor finibus augue, non lacinia sapien tellus sit amet dolor. Nunc lacinia eu risus eu commodo. Cras et tincidunt lacus. Fusce vestibulum iaculis nibh, dapibus fermentum erat sodales id. Nullam id arcu elit. Proin tristique mi justo. Integer viverra pretium congue. Sed et porta ex, eu maximus eros. Aenean vulputate euismod risus a congue.
+		</p>
+	</div>
+	<img id="image1" src="{% static 'images/1.jpg' %}">
+	<div id="infoBox2" class="infoBox">
+		<p>
+		Nullam a lorem nulla. Nulla ornare, massa id laoreet hendrerit, eros arcu lacinia nunc, porta fringilla magna magna ut felis. Sed ut facilisis justo. Phasellus auctor rhoncus lacus, at aliquet ligula finibus nec. Nunc feugiat pretium ipsum, a tristique eros elementum sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent blandit mollis imperdiet. In porttitor elementum ligula, nec malesuada tellus pharetra at. Mauris et vehicula quam. Aliquam viverra nulla ac luctus rhoncus. Praesent lacus dolor, euismod eget tristique eu, facilisis sed quam. Nunc fringilla fermentum magna a accumsan. Sed rutrum nisi in nisl congue, tempus commodo dui lacinia. Mauris placerat turpis egestas iaculis tincidunt.<br>
+		<br>
+		Nulla at mi ante. Quisque lacinia, magna nec sagittis iaculis, mi dolor finibus augue, non lacinia sapien tellus sit amet dolor. Nunc lacinia eu risus eu commodo. Cras et tincidunt lacus. Fusce vestibulum iaculis nibh, dapibus fermentum erat sodales id. Nullam id arcu elit. Proin tristique mi justo. Integer viverra pretium congue. Sed et porta ex, eu maximus eros. Aenean vulputate euismod risus a congue.
+		</p>
+	</div>
+	<img id="image2" src="{% static 'images/element.jpg' %}">
+	</div>
+	<footer>
+    	<p>Avanti Interiors &copy; 2014</p>
+  	</footer>
 </body>
 
 </HTML>
