--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -60,30 +60,34 @@
   		</script>
 	</head>
 	<body>
-	<header>
-		<h1><a href="/">Avanti Interiors</a></h1>
-		<p>
-			Phone: 01242 2345253<br>
-			Email: info@avantiinteriors.co.uk
-		</p>
-    <ul>
-      <li><a href="partitioning">Office Partitioning</a></li>
-      <li><a href="ceilings">Suspended Ceilings</a></li>
-      <li><a href="other">Other Services</a></li>
-    </ul>
-	</header>
-  <div id="slides">
-    <img src="{% static 'images/1.jpg' %}">
-    <img src="http://placehold.it/940x528">
-  </div>
-	<div id="about">
-		<img src="{% static 'images/multiple25.png' %}">
-		<h2>About us</h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed rhoncus mi. Nam ac dictum metus. Ut et aliquam leo. In sollicitudin sem ac nisl viverra tincidunt. Pellentesque euismod sit amet velit eget euismod. Pellentesque sagittis enim ac consectetur dictum. Nulla magna sapien, consectetur vestibulum molestie quis, molestie sed purus.<br><br>
-Nunc quis placerat diam. Curabitur vel molestie sem, sed semper massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vehicula neque quis nisl elementum, vitae scelerisque metus lobortis. Donec cursus, magna sit amet tincidunt consectetur, justo velit efficitur nulla, sit amet tincidunt massa est nec leo. Vivamus at odio tellus. Vivamus venenatis porta rhoncus. Donec nulla lorem, cursus a suscipit a, dictum non nulla. Nullam ultrices blandit hendrerit. Vestibulum egestas dapibus tortor venenatis scelerisque.</p>
-		
+	<div class="wrapper">
+		<header>
+			<h1><a href="/">Avanti Interiors</a></h1>
+			<p>
+				Phone: 01242 2345253<br>
+				Email: info@avantiinteriors.co.uk
+			</p>
+	    <ul>
+	      <li><a href="partitioning">Office Partitioning</a></li>
+	      <li><a href="ceilings">Suspended Ceilings</a></li>
+	      <li><a href="other">Other Services</a></li>
+	    </ul>
+		</header>
+		<div id="slides">
+		   <img src="{% static 'images/1.jpg' %}">
+		   <img src="http://placehold.it/940x528">
+		</div>
+		<div id="about">
+			<img src="{% static 'images/multiple25.png' %}">
+			<h2>About us</h2>
+			<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed rhoncus mi. Nam ac dictum metus. Ut et aliquam leo. In sollicitudin sem ac nisl viverra tincidunt. Pellentesque euismod sit amet velit eget euismod. Pellentesque sagittis enim ac consectetur dictum. Nulla magna sapien, consectetur vestibulum molestie quis, molestie sed purus.<br><br>
+		Nunc quis placerat diam. Curabitur vel molestie sem, sed semper massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vehicula neque quis nisl elementum, vitae scelerisque metus lobortis. Donec cursus, magna sit amet tincidunt consectetur, justo velit efficitur nulla, sit amet tincidunt massa est nec leo. Vivamus at odio tellus. Vivamus venenatis porta rhoncus. Donec nulla lorem, cursus a suscipit a, dictum non nulla. Nullam ultrices blandit hendrerit. Vestibulum egestas dapibus tortor venenatis scelerisque.</p>	
+			</div>
 	</div>
+	<footer>
+    <p>Avanti Interiors &copy; 2014</p>
+  </footer>
 </body>
 
 </HTML>
