About Us description

--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -81,8 +81,12 @@
 			<img src="{% static 'images/multiple25.png' %}">
 			<h2>About us</h2>
 			<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed rhoncus mi. Nam ac dictum metus. Ut et aliquam leo. In sollicitudin sem ac nisl viverra tincidunt. Pellentesque euismod sit amet velit eget euismod. Pellentesque sagittis enim ac consectetur dictum. Nulla magna sapien, consectetur vestibulum molestie quis, molestie sed purus.<br><br>
-		Nunc quis placerat diam. Curabitur vel molestie sem, sed semper massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc vehicula neque quis nisl elementum, vitae scelerisque metus lobortis. Donec cursus, magna sit amet tincidunt consectetur, justo velit efficitur nulla, sit amet tincidunt massa est nec leo. Vivamus at odio tellus. Vivamus venenatis porta rhoncus. Donec nulla lorem, cursus a suscipit a, dictum non nulla. Nullam ultrices blandit hendrerit. Vestibulum egestas dapibus tortor venenatis scelerisque.</p>	
+				Hello, we are Avanti Interiors. We are an expert business specialising in office partitioning and ceilings. We also offer services in plumbing, drylining, mezzanine floors, flooring, decoration, electrics and data and office furniture. Our principles are to provide a high class service to our customers ensuring that the job is done to excellent standards.<br>
+				<br>
+				Safety is a major principle and as a result all of our partitions have outstanding fire performance as well as fantastic acoustic and structural enforcement.<br>
+				<br>
+				We started in 2014 being founded by Roland Crayton and [insert partner name here] who have [x number of years] experience in the interior design industry. Interior design is our passion and it is our pleasure to handle your interior design needs.
+			</p>	
 			</div>
 	</div>
 	<footer>
