about us update

--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -81,7 +81,7 @@
 			<img src="{% static 'images/multiple25.png' %}">
 			<h2>About us</h2>
 			<p>
-				Hello, we are Avanti Interiors. We are an expert business specialising in office partitioning and ceilings. We also offer services in plumbing, drylining, mezzanine floors, flooring, decoration, electrics and data and office furniture. Our principles are to provide a high class service to our customers ensuring that the job is done to excellent standards.<br>
+				Hello, we are Avanti Interiors. We are an expert business specialising in office partitioning and ceilings. We also offer services in plumbing, drylining, mezzanine floors, flooring, electrics and data, decoration and office furniture. Our principles are to provide a high class service to our customers ensuring that the job is done to excellent standards.<br>
 				<br>
 				Safety is a major principle and as a result all of our partitions have outstanding fire performance as well as fantastic acoustic and structural enforcement.<br>
 				<br>
