added about us and header updates

--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -13,7 +13,7 @@
 	<header>
 		<h1><a href="/">Avanti Interiors</a></h1>
 		<p>
-			Phone: 01242 2345253<br>
+			Phone: 07738 628255<br>
 			Email: info@avantiinteriors.co.uk
 		</p>
     <ul>
