--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -16,7 +16,7 @@
 			top:150px;
 			width:25%;
 			left:5%;
-			height: 400px;
+			height: 450px;
 			overflow:hidden;
 			z-index:1;
 		}
@@ -64,7 +64,7 @@
 		<header>
 			<h1><a href="/">Avanti Interiors</a></h1>
 			<p>
-				Phone: 01242 2345253<br>
+				Phone: 07738 628255<br>
 				Email: info@avantiinteriors.co.uk
 			</p>
 	    <ul>
@@ -81,11 +81,9 @@
 			<img src="{% static 'images/multiple25.png' %}">
 			<h2>About us</h2>
 			<p>
-				Hello, we are Avanti Interiors. We are an expert business specialising in office partitioning and ceilings. We also offer services in plumbing, drylining, mezzanine floors, flooring, electrics and data, decoration and office furniture. Our principles are to provide a high class service to our customers ensuring that the job is done to excellent standards.<br>
-				<br>
-				Safety is a major principle and as a result all of our partitions have outstanding fire performance as well as fantastic acoustic and structural enforcement.<br>
-				<br>
-				We started in 2014 being founded by Roland Crayton and [insert partner name here] who have [x number of years] experience in the interior design industry. Interior design is our passion and it is our pleasure to handle your interior design needs.
+			At Avanti Interiors we specialise in office partitions and suspended ceilings. We can assist in your design and offer advice if required. We offer a complete service that can include mezzanine floors, air conditioning, heating and plumbing, electrics and data, decoration, flooring, fire proofing, soundproofing and insulation and office furniture. <br>
+			<br>
+			We have had many years experience working for many large companies to very small companies. All our contractors are bona fide, long established, qualified Tradesmen. 
 			</p>	
 			</div>
 	</div>
