--- a/Roland/static/css/header.css
+++ b/Roland/static/css/header.css
@@ -22,14 +22,14 @@
       text-decoration:none;
     }
 		header {
-			background-color:white;
+			background-color:rgba(255,255,255,0.95);
 			height:100px;
 			width:100%;
-			position:absolute;
+			position:fixed;
 			top:0;
 			left:0;
-			z-index:1;
-/*			box-shadow: 0px 2px 5px #888888;*/
+			z-index:12;
+			box-shadow: 0px 2px 5px #888888;
 		}
 		header p {
 			color:rgb(50,50,50);
@@ -78,14 +78,14 @@
     }
     .wrapper {
       min-height: 100%;
-      margin: 0 auto -100px; /* the bottom margin is the negative value of the footer's height */
+      margin: 0 auto -60px;/*  the bottom margin is the negative value of the footer's height */
     }
     .wrapper:after {
         content: "";
     display: block;
     }
     footer, .wrapper:after{
-      height: 100px; /* '.push' must be the same height as 'footer' */
+      height: 60px; /* '.push' must be the same height as 'footer' */
     }
     footer {
       background-color:white;
@@ -99,7 +99,7 @@
       /*font-family: 'Righteous', cursive;*/
       font-family: 'Arimo', sans-serif;
       position:relative;
-      top:45px;
+      top:25px;
       text-align:center;
       font-size:9pt;
       right:20px;
